--- a/src/app/shared/rating/rating.component.html
+++ b/src/app/shared/rating/rating.component.html
@@ -1,3 +1,5 @@
-<p>
-  rating works!
-</p>
+<i *ngFor="let r of rates" class="fa"
+ [class.fa-star]="r <= rate" [class.fa-star-o]="r > rate"
+ (click)="setRate(r)"
+ (mouseenter)="setTemporaryRate(r)"
+ (mouseleave)="clearTemporaryRate()"></i>
