--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,13 +2,13 @@
  <section class="content-header">
   <h1>
     Todos os Restaurantes
-   <a class="search-link pull-right"><i class="fa fa-search"></i></a>
+   <a (click)="toggleSeach()" class="search-link pull-right"><i class="fa fa-search"></i></a>
   </h1>
 </section>
 
 <!-- barra de busca-->
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 search-bar" [@toggleSeach]="searchBarState">
     <form>
       <div class="form-group">
         <input type="text" class="form-control" placeholder="o que você está procurando?">
