--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -9,9 +9,10 @@
 <!-- barra de busca-->
 <div class="row">
   <div class="col-xs-12 search-bar" [@toggleSeach]="searchBarState">
-    <form>
+    <form [formGroup]="searchForm" >
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="o que você está procurando?">
+        <input type="text" formControlName="searchControl" 
+        class="form-control" placeholder="o que você está procurando?">
       </div>
     </form>
   </div>
