--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,7 +2,9 @@
  <section class="content-header">
   <h1>
     Todos os Restaurantes
-   <a (click)="toggleSeach()" class="search-link pull-right"><i class="fa fa-search"></i></a>
+   <a (click)="toggleSeach()" class="search-link pull-right">
+     <span *ngIf="iptSearch.value"><small>"{{iptSearch.value}}"</small></span><i class="fa fa-search"></i>
+    </a>
   </h1>
 </section>
 
@@ -11,7 +13,7 @@
   <div class="col-xs-12 search-bar" [@toggleSeach]="searchBarState">
     <form [formGroup]="searchForm" >
       <div class="form-group">
-        <input type="text" formControlName="searchControl" 
+        <input type="text" #iptSearch formControlName="searchControl" 
         class="form-control" placeholder="o que você está procurando?">
       </div>
     </form>
