--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -18,7 +18,7 @@
       <div class="row">
         <!-- /.col -->
         <div class="col-xs-offset-8 col-xs-4">
-          <button type="submit" [disabled]="loginForm.invalid"
+          <button type="submit" (click)="login()" [disabled]="loginForm.invalid"
             class="btn btn-primary btn-block btn-flat">Entrar</button>
         </div>
         <!-- /.col -->
