--- a/src/app/order/delivery-costs/delivery-costs.component.html
+++ b/src/app/order/delivery-costs/delivery-costs.component.html
@@ -3,15 +3,15 @@
     <tbody>
       <tr>
         <th style="width:50%">Itens:</th>
-        <td class="text-right">{{itemsValue | currency: 'BLR': true  }}</td>
+        <td class="text-right">{{itemsValue | currency: 'BLR': 'symbol'  }}</td>
       </tr>
       <tr>
         <th>Frete:</th>
-        <td class="text-right">{{delivery | currency: 'BLR': true}}</td>
-      </tr>
+        <td class="text-right">{{delivery | currency: 'BLR': 'symbol'}}</td>
+      </tr>  
       <tr>
         <th>Total:</th>
-        <td class="text-right">{{total() | currency: 'BLR': true}}</td>
+        <td class="text-right">{{total() | currency: 'BLR': 'symbol'}}</td>
       </tr>
     </tbody>
   </table>
