--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -27,7 +27,7 @@
         <td>{{item.menuItem.name}}</td>
 
         <td>{{item.menuItem.descricao}}</td>
-        <td class="text-right">{{item.value() | currency: 'BRL': true }}</td>
+        <td class="text-right">{{item.value() | currency: 'BRL': 'symbol' }}</td>
         <td class="text-right">
           <a (click)="emitRemove(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
         </td>
